fix focus/activate for non-embedders when windows are first created. b=330587 r=mento